--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 32px;
+  float: left;
+  position: relative;
+  top: -8px;
+}
+
 .main {
   margin-top: 100px;
   text-align: center;
